INT-21347 theme_snap: Fix user menu visibility in mod_forum

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -5599,7 +5599,7 @@ li.snap-activity.modtype_folder div[id^="folder_tree"] {
     }
 }
 
-#page-mod-forum-view #mr-nav {
+#page-mod-forum-view.overflow-hidden #mr-nav {
     z-index: -1;
 }
 
